--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hi
+<html>
+    <head>
+        <meta HTTP-EQUIV="REFRESH" content="0; url=http://github.com/Informadiko/Informadiko">
+    </head>
+    <body>
+        Redirecting to: <a href="http://github.com/Informadiko/Informadiko">http://github.com/Informadiko/Informadiko</a>
+    </body>
+</html>
+
